# Historical

./: README.md
code-mpfi-petsc3.2/: Makefile  actualgen.cxx  actualgen.h  bisection.cpp  bisection.cxx  dynamic.cxx  dynamic.h  eigenerr  eigenerr.cxx  eigenerr.h  eigenrig.cxx  estimatel  estimatel.cxx  firstvector  firstvector.cxx  func.txt  functions-interval.h  functions-mpfi.cxx  functions-mpfi.h  genmatrix  genmatrix.cxx  interval.cxx  interval.h  krawczyk.cpp  labile.cxx  mann100000.petsc  mann16384.petsc  mann32768out.txt  mann65539.petsc  markovize.cxx  mpfi++dafare.h  mpfi-debug.cxx  mpfi_obj.h  mpfi_obj_autder.cxx  mpfi_obj_autder.h  mpfiautder.cxx  mpfiautder.h  newton-rhapson.cxx  octave-core  projectivecone  (+9 more)
code_siads/: CMakeLists.txt  COMPILING  config.doxy  eigenerr-L1.cxx  eigenerr-lipschitz.cxx  genmatrix-lipschitz.cxx  genmatrix-ulam.cxx  mainpage.dox  markovize.cxx
code_siads/cmake/Modules/: FindCLN.cmake  FindGiNaC.cmake  FindMPFR.cmake  FindReadline.cmake  FindiRRAM.cmake
code_siads/lipschitz/: CMakeLists.txt  actualgen-lipschitz.cxx  actualgen-lipschitz.h  dynamic-lipschitz.cxx  dynamic-lipschitz.h  eigenrig-lipschitz.cxx  eigenrig-lipschitz.h
code_siads/ulam/: CMakeLists.txt  actual-genmatrix-ulam.cxx  actual-genmatrix-ulam.h  dynamic.cxx  dynamic.h  eigenrig-L1.cxx  eigenrig-L1.h  rapfloat.cxx  rapfloat.h  rinterval.cxx  rinterval.h  rpartition.cxx  rpartition.h
markovize/: Jamroot  linalg.h  markovize.cxx  srmatrix.cxx
